--- a/css-excercise/opportunities.html
+++ b/css-excercise/opportunities.html
@@ -29,7 +29,7 @@
             letter-spacing: 5px;
         }
         main{
-            margin: 3em;
+            margin: 2em;
             display: grid;
             grid-template-columns: 28% 72%;
             height: 100%;
@@ -65,6 +65,23 @@
         }
         img{
             padding:0.5em;
+            width: 49%;
+        }
+        @media screen and (max-width:1000px) {
+            main{
+                grid-template-columns: 1fr;
+            }
+            aside{
+                margin-right: 0;
+            }
+        }
+        @media screen and (max-width:560px) {
+            main{
+                margin: 1.5em;
+            }
+            img{
+                width: 100%;
+            }
         }
     </style>
 </head>
